# oxide-mvu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: effect.rs  emitter.rs  lib.rs  logic.rs  renderer.rs  runtime.rs
tests/: lib_test.rs
tests/integration/: effect_dispatch_tests.rs  lib.rs  reduction_and_emission_tests.rs
tests/integration/simple_logic/: mod.rs
