[package]
name = "oxide-mvu"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A standalone MVU runtime for Rust with no_std support for embedded systems"
repository = "https://github.com/noheltcj/oxide-mvu"
homepage = "https://github.com/noheltcj/oxide-mvu"
documentation = "https://docs.rs/oxide-mvu"
keywords = ["mvu", "architecture", "no-std", "embedded", "state-management"]
categories = ["no-std", "embedded", "rust-patterns"]
exclude = []

[features]
no_std = []
testing = ["futures"]
futures = ["dep:futures"]

[dependencies]
flume = { version = "0.12", default-features = false, features = ["async"] }
futures = { version = "0.3.31", features = ["executor"], optional = true }
portable-atomic-util = { version = "0.2.4", default-features = false, features = ["alloc"] }
spin = { version = "0.10.0", features = ["portable_atomic"] }

[dev-dependencies]
oxide-mvu = { path = ".", features = ["testing"] }
mockall = "0.14"
futures = "0.3.31"

[[test]]
name = "integration"
path = "tests/integration/lib.rs"
